<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/english_ime_settings"
        android:key="english_ime_settings">

    <PreferenceScreen
            android:title="@string/launch_tutorial"
            android:summary="@string/launch_tutorial_summary">
        <intent
                android:action="com.googlecode.eyesfree.inputmethod.latin.tutorial.LAUNCH_TUTORIAL"
                android:targetPackage="com.googlecode.eyesfree.inputmethod.latin" />
    </PreferenceScreen>

    <CheckBoxPreference
            android:key="auto_switch"
            android:title="@string/auto_switch"
            android:summary="@string/auto_switch_summary"
            android:persistent="true"
            android:defaultValue="@bool/default_auto_switch"
            />

    <CheckBoxPreference
            android:key="dpad_keys"
            android:title="@string/dpad_keys"
            android:summary="@string/dpad_keys_summary"
            android:persistent="true"
            android:defaultValue="@bool/default_dpad_keys"
            />

    <CheckBoxPreference
            android:key="linear_navigation"
            android:title="@string/linear_navigation"
            android:summary="@string/linear_navigation_summary"
            android:persistent="true"
            android:defaultValue="@bool/default_linear_navigation"
            />

<!--
    <CheckBoxPreference
            android:key="answer_calls"
            android:title="@string/answer_calls"
            android:summary="@string/answer_calls_summary"
            android:persistent="true"
            android:defaultValue="@bool/default_answer_calls"
            />
-->

    <CheckBoxPreference
            android:key="vibrate_on"
            android:title="@string/vibrate_on_keypress"
            android:summary="@string/vibrate_on_keypress_summary"
            android:persistent="true"
            android:defaultValue="@bool/default_vibrate"
            />

    <CheckBoxPreference
            android:key="sound_on"
            android:title="@string/sound_on_keypress"
            android:summary="@string/sound_on_keypress_summary"
            android:persistent="true" 
            android:defaultValue="@bool/default_sound"
            />

<!--
    <CheckBoxPreference
            android:key="popup_on"
            android:title="@string/popup_on_keypress"
            android:persistent="true"
            android:defaultValue="@bool/default_popup_preview"
            />

    <CheckBoxPreference
            android:key="recorrection_enabled"
            android:title="@string/prefs_enable_recorrection"
            android:summary="@string/prefs_enable_recorrection_summary"
            android:persistent="true"
            android:defaultValue="@bool/default_recorrection_enabled"
            />
 -->
 
    <CheckBoxPreference
            android:key="auto_cap"
            android:title="@string/auto_cap"
            android:persistent="true"
            android:defaultValue="@bool/default_auto_cap"
            />

    <ListPreference
            android:key="voice_mode"
            android:title="@string/voice_input"
            android:persistent="true"
            android:entryValues="@array/voice_input_modes_values"
            android:entries="@array/voice_input_modes"
            android:defaultValue="@string/voice_mode_main"
            />

<!--
    <PreferenceScreen
            android:title="@string/language_selection_title"
            android:summary="@string/language_selection_summary">
        <intent
                android:action="com.googlecode.eyesfree.inputmethod.latin.INPUT_LANGUAGE_SELECTION"/>
    </PreferenceScreen>
-->
    <PreferenceCategory
            android:title="@string/prediction_category"
            android:key="prediction_settings">

        <CheckBoxPreference
            android:key="quick_fixes"
            android:title="@string/quick_fixes"
            android:summary="@string/quick_fixes_summary"
            android:persistent="true"
            android:defaultValue="@bool/default_quick_fixes"
            />

        <CheckBoxPreference
            android:key="show_suggestions"
            android:title="@string/show_suggestions"
            android:summary="@string/show_suggestions_summary"
            android:persistent="true"
            android:defaultValue="@bool/default_show_suggestions"
            />

        <CheckBoxPreference
            android:key="auto_complete"
            android:title="@string/auto_complete"
            android:summary="@string/auto_complete_summary"
            android:persistent="true" 
            android:defaultValue="@bool/enable_autocorrect"
            android:dependency="show_suggestions"
            />
    </PreferenceCategory>            
 
</PreferenceScreen>
